@@ -17,6 +17,9 @@ Minor Changes:
  * @power now reports when you try and set a power which is already set (or
    clear one which isn't set), similar to @set. Suggested by Paige. [MG]
 
+Commands:
+ * Add /preserve switch to @chzone and @chzoneall, like @chown/preserve.
+
 Fixes:
  * Help fixes.
  * @search's output can now include garbage objects, like lsearch().
@@ -34,6 +37,8 @@ Fixes:
  * namelist() did not accept names in quotes. Reported by Amberyl. [MG]
  * @attrib/access/retroactive could remove the 'root' flag from attribute
    trees, making nasty things happen. Reported by Cooee. [MG]
+ * Fix fn() to check that the first arugment is actually the name of a
+   built-in function. Reported by Time and Cheetah. [DC]
 
 
 & 1.8.4p0
