@@ -50,6 +50,14 @@ FUNCTION(fun_fn)
   p = args[0];
   process_expression(tbuf, &tp, &p, executor, caller,
                      enactor, PE_DEFAULT, PT_DEFAULT, pe_info);
+  /* Make sure a builtin function with the name actually exists */
+  if (!builtin_func_hash_lookup(tbuf)) {
+    safe_str(T("#-1 FUNCTION ("), buff, bp);
+    safe_str(tbuf, buff, bp);
+    safe_str(T(") NOT FOUND"), buff, bp);
+    return;
+  }
+
   safe_chr('(', tbuf, &tp);
   for (i = 1; i < nargs; i++) {
     if (i > 1)
